--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,10 @@
   margin-bottom: 20px;
 }
 
+.address {
+  margin-bottom: 10px;
+}
+
 .avatar {
   width: 320 px;
   height: 320px;
@@ -24,8 +28,12 @@ body {
   text-decoration: none;
 }
 
+.career-objective {
+  margin-bottom: 20px;
+}
+
 .content {
-  max-width: 600px;
+  max-width: 900px;
 }
 
 .contact {
@@ -61,13 +69,20 @@ body {
   }
 }
 
-.HeaderTop {
-  /* use dot = call class */
-  background-color: orange;
-  padding: 12px 24px;
-  font-size: 42px;
-  text-transform: uppercase;
-  margin-bottom: 15px;
+.education {
+  margin-bottom: 20px;
+}
+
+.h1 {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.h3 {
+  font-size: 20px;
+  font-weight: 500;
+  margin-bottom: 5px;
 }
 
 @media screen and (max-width: 768px) {
@@ -80,4 +95,70 @@ body {
   font-size: 16px;
   text-transform: uppercase;
   margin-bottom: 10px;
+}
+
+.career-objective {
+  margin-top: 20px;
+}
+
+.line-border {
+  background-color: orange;
+  max-width: 768px;
+  height: 3px;
+  border-radius: 2px;
+}
+
+.name {
+  /* use dot = call class */
+  background-color: orange;
+  border-radius: 5px;
+  padding: 12px 5px;
+  font-size: 42px;
+  font-weight: 1200px;
+  text-transform: uppercase;
+  margin-bottom: 15px;
+  max-width: 550px;
+  text-align: left;
+}
+
+.personal-container {
+  margin-bottom: 20px;
+}
+
+.personal-container1 {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+}
+
+.personal-container2 {
+  display: flex;
+  flex-direction: column;
+}
+
+.personality {
+  margin-bottom: 20px;
+}
+
+.qualifications {
+  margin-bottom: 20px;
+}
+
+.reference {
+  margin-bottom: 40px;
+}
+
+.skill {
+  margin-bottom: 20px;
+}
+
+.title {
+  font-size: 120px;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.working-and-training {
+  margin-bottom: 20px;
 }
